# local-server

./: .gitignore  LICENSE  README.md  export_locals.sh
docker-pi-hole/: .env.example  KUBERNETES_DEPLOYMENT.md  NOTES.txt  REMOTE_K3S_SETUP.md  service.yaml  servicemonitor.yaml  statefulset.yaml
docker-pi-hole/helm/pihole/: Chart.yaml  values.yaml
docker-pi-hole/templates/: _helpers.tpl  ingress.yaml
monitor-agent/: .env.example  Dockerfile  Pipfile  README.md  config.py  deploy.sh  pyproject.toml
monitor-agent/helm/: Chart.yaml  values.yaml
monitor-agent/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
monitor-agent/src/: app.py  kube_client.py  logging_helper.py  models.py  routes.py
monitor-agent/tests/: conftest.py  test_routes.py
sports-trmnl-app/: app_contents.html  sample_data.json
sports_scores/: .env.example  README.md
sports_scores/api/: Dockerfile  README.md  config.py  deploy.sh  main.py  pyproject.toml
sports_scores/api/helm/sports-scores-api/: Chart.yaml  values.yaml
sports_scores/api/helm/sports-scores-api/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
sports_scores/api/src/: app.py  routes.py
sports_scores/dev-testing/: SportScores.ipynb
sports_scores/job/: Dockerfile  README.md  config.py  deploy.sh  main.py
sports_scores/job/app/: load_events.py  load_schedule.py  publish.py
sports_scores/job/helm/sports-scores-job/: Chart.yaml  values.yaml
sports_scores/job/helm/sports-scores-job/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml  serviceaccount.yaml
sports_scores/shared_models/: README.md  models.py  pyproject.toml  utils.py
sports_scores/shared_models/resources/: teams.json
sports_scores/shared_models/resources/icons/: README.md
sports_scores/shared_models/resources/sql/: add_team_selection.sql  check_leagues.sql  create_events_table.sql  get_team_and_events.sql  get_team_events.sql  get_teams.sql  test.sql
trmnl-agent/: .env.example  .gitignore  Dockerfile  README.md  config.py  deploy.sh  main.py  pyproject.toml
trmnl-agent/app/: __init__.py  app.py  utils.py
trmnl-agent/helm/trmnl-agent/: Chart.yaml  values.yaml
trmnl-agent/helm/trmnl-agent/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  secret.yaml  serviceaccount.yaml
trmnl-agent/tests/: README.md  conftest.py  test_app.py  test_utils.py
trmnl-app/: Test_Data-extract.ipynb  app_contents.html  sample_table.html
