[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor-agent"
description = "Microservice monitor local k3s cluster via API calls"
version = "0.0.1"

requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard]",
    "fastapi",
    "pydantic", 
    "pydantic-settings",
    "kubernetes",
    "gunicorn"
]

[project.optional-dependencies]
test = [
    "pytest", 
    "pytest-mock", 
    "requests", 
    "pytest-asyncio", 
    "httpx",
    "pytest-cov",
    "httpx2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
