[build-system]
requires = ["setuptools >= 77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-models"
version = "0.0.1"
description = "Shared Pydantic models for Sport Scores Apps"
authors = [{name = "agbs2k8"}]
dependencies = [
	"pydantic",
	"psycopg[binary]",
	"requests"
]

[tool.setuptools]
packages = ["shared_models"]
include-package-data = true

[tool.setuptools.package-dir]
shared_models = "."

[tool.setuptools.package-data]
shared_models = [
	"resources/*.py",
	"resources/*.json",
	"resources/icons/*/*.svg",
]